--- a/mobile-app/client-app.html
+++ b/mobile-app/client-app.html
@@ -460,13 +460,36 @@
 </head>
 <body>
     <!-- Mobile Header -->
-    <div class="mobile-header">
-        <div class="logo">Hey Spruce</div>
-        <div class="user-info">
-            <button class="notification-btn" onclick="showNotifications()">
-                🔔
+    <div class="mobile-header" style="border-bottom: 2px solid var(--primary);">
+        <div style="display: flex; align-items: center; gap: 0.75rem;">
+            <div style="width: 40px; height: 40px; background: #1e3a5f; border-radius: 50%; display: flex; align-items: center; justify-content: center; position: relative; overflow: hidden;">
+                <svg width="36" height="36" viewBox="0 0 100 100">
+                    <style>
+                        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
+                    </style>
+                    <text x="50" y="40" text-anchor="middle" style="font-family: 'Dancing Script', cursive; font-size: 26px; fill: white; font-weight: 700;">Hey</text>
+                    <text x="50" y="65" text-anchor="middle" style="font-family: 'Dancing Script', cursive; font-size: 26px; fill: white; font-weight: 700;">Spruce</text>
+                </svg>
+            </div>
+            <div style="display: flex; flex-direction: column; line-height: 1.2;">
+                <span style="font-size: 1rem; font-weight: 700; color: var(--primary);">Hey Spruce</span>
+                <span style="font-size: 0.75rem; font-weight: 500; color: var(--gray-600);">Client Portal</span>
+            </div>
+        </div>
+        <div class="user-info" style="display: flex; align-items: center; gap: 0.5rem;">
+            <button class="notification-btn" onclick="showNotifications()" style="position: relative;">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+                    <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+                </svg>
                 <span class="notification-badge" id="notificationCount">3</span>
             </button>
+            <div class="location-badge" onclick="toggleLocationMenu()" style="cursor: pointer; background: var(--gray-100); padding: 0.5rem 0.75rem; border-radius: 6px; font-size: 0.875rem; font-weight: 500; display: flex; align-items: center; max-width: 150px;">
+                <span id="locationName" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">All Locations</span>
+                <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-left: 0.25rem; flex-shrink: 0;">
+                    <polyline points="6 9 12 15 18 9"></polyline>
+                </svg>
+            </div>
         </div>
     </div>
 
@@ -477,18 +500,40 @@
             <!-- Quick Stats -->
             <div class="stats-grid">
                 <div class="stat-card">
+                    <div style="width: 40px; height: 40px; margin: 0 auto 0.5rem; background: var(--primary-light); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: var(--primary);">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M9 11H3m6 0v6m0-6l-6 6m11-3h6m-6 0v-6m0 6l6-6"></path>
+                        </svg>
+                    </div>
                     <div class="stat-value">12</div>
-                    <div class="stat-label">Active Work Orders</div>
+                    <div class="stat-label">Active Orders</div>
                 </div>
                 <div class="stat-card">
+                    <div style="width: 40px; height: 40px; margin: 0 auto 0.5rem; background: #fed7aa; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #f59e0b;">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <polyline points="12 6 12 12 16 14"></polyline>
+                        </svg>
+                    </div>
                     <div class="stat-value">3</div>
-                    <div class="stat-label">Pending Approvals</div>
+                    <div class="stat-label">Pending</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-value">$2,850</div>
+                    <div style="width: 40px; height: 40px; margin: 0 auto 0.5rem; background: #d1fae5; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #10b981;">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M12 2v20M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path>
+                        </svg>
+                    </div>
+                    <div class="stat-value">$24.8K</div>
                     <div class="stat-label">This Month</div>
                 </div>
                 <div class="stat-card">
+                    <div style="width: 40px; height: 40px; margin: 0 auto 0.5rem; background: var(--primary-light); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: var(--primary);">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                            <circle cx="12" cy="10" r="3"></circle>
+                        </svg>
+                    </div>
                     <div class="stat-value">8</div>
                     <div class="stat-label">Locations</div>
                 </div>
