Restructure for Vercel deployment - move Express to serverless functions

--- a/mobile-app/client-app.html
+++ b/mobile-app/client-app.html
@@ -1095,6 +1095,10 @@
             document.querySelector('.mobile-modal').remove();
         }
         
+        function showHelpCenter() {
+            showToast('Opening Help Center...', 'info');
+        }
+        
         function showNotifications() {
             showToast('Opening notifications...', 'info');
             // Reset notification count
